# g5

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel
experimental/1brc/: 1brc.cc  BUILD
tools/: BUILD  BUILD.bazel  bzl_execlog_to_compile_commands_json.cc  compilation_database.proto  spawn.proto
