bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "grpc", version = "1.74.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "re2", version = "2025-06-26")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "asio", version = "1.34.2")
bazel_dep(name = "tcmalloc", version = "0.0.0-20250331-43fcf6e")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "riegeli", version = "0.0.0-20250706-c4d1f27")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "copybara",
    sha256 = "5938f1db447c20ff9859828f3d52ce1b04dbe1da18195337f3efae5e65f1d969",
    urls = ["https://github.com/google/copybara/releases/download/v20250224/copybara_deploy.jar"],
)
