bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "asio", version = "1.34.2")
bazel_dep(name = "tcmalloc", version = "0.0.0-20250927-12f2552")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "riegeli", version = "0.0.0-20250822-9f2744d")

bazel_dep(name = "highway", version = "1.3.0")
git_override(
    module_name = "highway",
    commit = "322d55670ca88d49e2565cd72757c5139b2b9fc1",
    remote = "https://github.com/google/highway.git"
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")
http_jar(
    name = "copybara",
    sha256 = "5938f1db447c20ff9859828f3d52ce1b04dbe1da18195337f3efae5e65f1d969",
    urls = ["https://github.com/google/copybara/releases/download/v20250224/copybara_deploy.jar"],
)

# Enable toolchains_llvm
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "21.1.6",
)

use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")
